--- a/.github/ISSUE_TEMPLATE/refactor.yml
+++ b/.github/ISSUE_TEMPLATE/refactor.yml
@@ -1,8 +1,8 @@
-name: 📝 Docs
-description: 코드 또는 애플리케이션과 관련한 문서를 작성합니다.
-title: "[DOCS] "
+name: ♻️ Refactor
+description: 기능 변화 없이 코드를 수정합니다. (코드 구조 개선, 가독성 향상 등)
+title: "[REFACTOR] "
 labels:
-  - 📝 docs
+  - ♻️ refactor
 body:
   - type: markdown
     attributes:
@@ -10,16 +10,23 @@ body:
         ---
         ### 이슈를 작성하기 전에 아래 내용을 확인해주세요:
         - 동일한 작업에 대한 이슈가 없음을 확인했습니다.
-        - 작업 목적이 명확합니다.
+        - 리팩토링 사유가 명확합니다.
+
+  - type: input
+    id: task-target
+    attributes:
+      label: 📄 작업 대상
+      description: 무엇을 대상으로 리팩토링을 진행할 것인지 작성해주세요.
+      placeholder: ex) 사용자 추가 로직
+    validations:
+      required: true
 
   - type: textarea
     id: task-description
     attributes:
-      label: 📄 작성할 문서 개요
-      description: 문서를 왜 작성하는지, 어떤 내용인지 설명해주세요.
-      placeholder: |
-        ex) JWT 관련 API를 메모하기 위해 문서를 작성합니다.
-        - `/jwt_api.md`
+      label: 📄 작업 개요
+      description: 진행 할 리팩토링에 대한 이유와 설명을 작성해주세요.
+      placeholder: ex) 코드 가독성 향상을 위해 코드를 정리합니다.
     validations:
       required: true
 
